# egraph

./: Cargo.toml  TODO.md  graph.dot
benches/: union_find.rs
examples/: basic.rs  loop.rs
src/: const_fold.rs  did_anything.rs  dot.rs  egraph.rs  graph.rs  lib.rs  matching.rs  node.rs  rec_node.rs  rewrite.rs  rewrite_rules.rs  rewrites.rs  template_rewrite.rs  union_find.rs  utils.rs
src/const_fold/: bin_op.rs  mod.rs  un_op.rs
src/egraph/: extract.rs  mod.rs
src/egraph/rewrite/: mod.rs  template_rewrite.rs  tmp_attempt.rs
src/egraph/rewrite/const_fold/: bin_op.rs  mod.rs  un_op.rs
src/node/: imm.rs  mod.rs
src/union_find/: id_to_parent_map.rs  mod.rs
tests/: egraph.rs  graph.rs  main.rs  main.rs.disabled  union_find.rs  utils.rs
