[package]
name = "egraph"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
derivative = "2.2.0"
derive-debug = "0.1.2"
either = "1.15.0"
hashbrown = "0.16.0"
stable-vec = "0.4.1"

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
enum-display = "0.2.1"
