[package]
name = "egraph"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
derive-debug = "0.1.2"
derive_more = { version = "2.0.1", features = ["full"] }
duct = "1.1.0"
enum-display = "0.2.1"
hashbrown = "0.16.0"
stable-vec = "0.4.1"
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.2"
assert_unordered = "0.3.5"

[[bench]]
name = "union_find"
harness = false
